--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>CV online</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 
@@ -37,7 +38,24 @@
         </ul>
       </div>
     </nav>
+<section class="main-section">
 
+  <div class="container">
+  <div class="item">
+  <h1>JAVIERA TORRES</h1>
+<h4>ALSINO 4886 | +56981990684 | javiera.torresm@usach.cl</h4>
+<p>Ingeniera Civil Informática, actualmente trabajando como Desarrolladora de Software en CITIAPS, Profesora de Análisis de Algoritmos y Estructura de Datos Diurno y Vespertino en la Universidad de Santiago de Chile</p>
+<div class="item--awesome">
+  <a href="https://github.com"><i class="fab fa-github-square fa-3x"></i></a>
+  <a href="https://twitter.com"><i class="fab fa-twitter-square fa-3x"></i></a>
+  <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-3x"></i></a>
+</div>
+  </div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  </div>
+</section>
 
   </body>
 </html>
