--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="container">
   <div class="item">
   <h1>JAVIERA TORRES</h1>
-<h4>ALSINO 4886 | +56981990684 | javiera.torresm@usach.cl</h4>
+<h5>ALSINO 4886 | +56981990684 | javiera.torresm@usach.cl</h5>
 <p>Ingeniera Civil Informática, actualmente trabajando como Desarrolladora de Software en CITIAPS, Profesora de Análisis de Algoritmos y Estructura de Datos Diurno y Vespertino en la Universidad de Santiago de Chile</p>
 <div class="item--awesome">
   <a href="https://github.com"><i class="fab fa-github-square fa-3x"></i></a>
@@ -51,9 +51,103 @@
   <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-3x"></i></a>
 </div>
   </div>
-  <div class="item"></div>
-  <div class="item"></div>
-  <div class="item"></div>
+  <div class="item item__exp">
+  <h1>EXPERIENCIA</h1>
+    <div class="item__contenido">
+    <div class="item__fecha">
+    <h4>CITIAPS</h4><h4>2018-2019</h4>
+    </div>
+    <h5>Desarrolladora FrontEnd</h5>
+    <p>Desarrollo web, maquetear, diseño y diseño ux en diversos proyectos con impacto social, abarcando gestión de desastres, coordinación de voluntarios. Principalmente uso del framework Vuejs</p>
+    </div>
+    <div class="item__contenido">
+    <div class="item__fecha">
+    <h4>Universidad de Santiago de Chile</h4><h4>2019 -</h4>
+    </div>
+    <h5>Profesora Diurna</h5>
+    <p>	Responsable de realizar la clases diurnas de la asignatura de Análisis de Algoritmos y Estructura de Datos</p>
+    </div>
+    <div class="item__contenido">
+    <div class="item__fecha">
+    <h4>Universidad de Santiago de Chile</h4><h4>2018-2019 </h4>
+    </div>
+    <h5>Profesora Vespertina</h5>
+    <p>	Responsable de realizar la clases diurnas de la asignatura de Análisis de Algoritmos y Estructura de Datos</p>
+    </div>
+    <div class="item__contenido">
+    <div class="item__fecha">
+    <h4>Universidad de Santiago de Chile</h4><h4>2018-2019 </h4>
+    </div>
+    <h5>Ayudante en Análisis y Estructuras de Datos Vespertino</h5>
+    <p>	Principalmente responsable de apoyar el Laboratorio del ramo, responder dudas, desarrollar material de apoyo y eventualmente realizar la clase. Además de labores de revisión y evaluación de los trabajos de los alumnos que lo cursan actualmente. Uso de C y Latex.
+  </p>
+    </div>
+    <div class="item__contenido">
+    <div class="item__fecha">
+    <h4>Universidad de Santiago de Chile</h4><h4>2015-2019 </h4>
+    </div>
+    <h5>Ayudante en Análisis y Estructuras de Datos Diurno</h5>
+    <p>	Principalmente responsable de apoyar el Laboratorio del ramo, responder dudas, desarrollar material de apoyo y eventualmente realizar la clase. Además de labores de revisión y evaluación de los trabajos de los alumnos que lo cursan actualmente. Uso de C y Latex.
+    </p>
+    </div>
+    <div class="item__contenido">
+    <div class="item__fecha">
+    <h4>Universidad de Santiago de Chile</h4><h4>2018-2019 </h4>
+    </div>
+    <h5>Ayudante de Investigación proyecto “Atómicas USACh”</h5>
+    <p>	Diversas responsabilidades de acuerdo al desarrollo de eventos, charlas y material del proyecto.
+    </p>
+    </div>
+    <div class="item__contenido">
+      <div class="item__fecha">
+        <h4>Universidad de Santiago de Chile</h4><h4>2015-2019
+        </h4>
+      </div>
+    <h5>Ayudante de Investigación proyecto “Sistema de Acompañamiento e Inserción a la Vida Universitaria”</h5>
+    <p>	Diversas responsabilidades de acuerdo al desarrollo de eventos, charlas y material del proyecto.
+    </p>
+    </div>
+
+  </div>
+    <div class="item item__exp">
+    <h1>EDUCACIÓN</h1>
+    <div class="item__contenido">
+    <div class="item__fecha">
+    <h4>DESAFIO LATAM</h4><h4>2019</h4>
+    </div>
+    <h5>Diseño UX/UI</h5>
+    </div>
+      <div class="item__contenido">
+      <div class="item__fecha">
+      <h4>UNIVERSIDAD DE SANTIAGO DE CHILE</h4><h4>2012-2018</h4>
+      </div>
+      <h5>Ingenieria Civil Informática</h5>
+      </div>
+
+    </div>
+
+    <div class="item item__exp">
+    <h1>HABILIDADES</h1>
+    <div class="item__contenido">
+    <div class="item__fecha">
+    <h4>LENGUAJES DE PROGRAMACIÓN Y ETIQUETADO</h4>
+    </div>
+    <p class="item__contenido--plarge">C, Java, Javascript, HTML5, Python</p>
+    </div>
+      <div class="item__contenido">
+      <div class="item__fecha">
+      <h4>HERRAMIENTAS</h4>
+      </div>
+      <p class="item__contenido--plarge">Bootstrap, Sketch, Wireframes, JQuery</p>
+    </div>
+
+    </div>
+    <div class="item item__exp">
+    <h1>CONTACTO</h1>
+    <div class="item__contenido">
+    <h5>Hola! Si deseas contactarme, por favor llena el formulario siguiente.</h5>
+    </div>
+    </div>
   </div>
 </section>
 
