--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-    <nav class="navbar navigation navbar-light navbar-expand-lg  ">
+    <nav class="navbar navigation navbar-light navbar-expand-lg d-none d-md-block ">
       <a class="navbar-brand navigation__logo d-none d-md-block" href="#">
           <img class="rounded-circle" src="./assets/images/yo.jpg" class="d-inline-block align-top" alt="foto personal">
         </a>
@@ -41,7 +41,7 @@
 <section class="main-section">
 
   <div class="container">
-  <div class="item" id="acerca">
+  <div class="item border-bottom" id="acerca">
   <h1>JAVIERA TORRES</h1>
 <h5>ALSINO 4886 | +56981990684 | javiera.torresm@usach.cl</h5>
 <p>Ingeniera Civil Informática, actualmente trabajando como Desarrolladora de Software en CITIAPS, Profesora de Análisis de Algoritmos y Estructura de Datos Diurno y Vespertino en la Universidad de Santiago de Chile</p>
@@ -50,8 +50,10 @@
   <a href="https://twitter.com"><i class="fab fa-twitter-square fa-3x"></i></a>
   <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-3x"></i></a>
 </div>
+
   </div>
-  <div class="item item__exp" id="exp">
+
+  <div class="item item__exp border-bottom" id="exp">
   <h1>EXPERIENCIA</h1>
     <div class="item__contenido">
     <div class="item__fecha">
@@ -109,7 +111,7 @@
     </div>
 
   </div>
-    <div class="item item__exp" id="educacion">
+    <div class="item item__exp border-bottom" id="educacion">
     <h1>EDUCACIÓN</h1>
     <div class="item__contenido">
     <div class="item__fecha">
@@ -126,7 +128,7 @@
 
     </div>
 
-    <div class="item item__exp" id="habilidades">
+    <div class="item item__exp border-bottom" id="habilidades">
     <h1>HABILIDADES</h1>
     <div class="item__contenido">
     <div class="item__fecha">
@@ -142,7 +144,7 @@
     </div>
 
     </div>
-    <div class="item item__exp" id="contacto">
+    <div class="item item__exp border-bottom" id="contacto">
     <h1>CONTACTO</h1>
     <div class="item__contenido">
     <h5 class="item__exp--h5mar">Hola! Si deseas contactarme, por favor llena el formulario siguiente.</h5>
